ux/css/workbench.css
/* ... */
#mc-workbench-container article, #mc-workbench-container aside, #mc-workbench-container details, #mc-workbench-container figcaption, #mc-workbench-container figure,
#mc-workbench-container footer, #mc-workbench-container header, #mc-workbench-container hgroup, #mc-workbench-container menu, #mc-workbench-container nav, #mc-workbench-container section {
	display: block;
}
#mc-workbench-container ol, #mc-workbench-container ul {
	list-style: none;
}
#mc-workbench-container blockquote, #mc-workbench-container q {
	quotes: none;
}
#mc-workbench-container blockquote:before, #mc-workbench-container blockquote:after,
#mc-workbench-container input:before, #mc-workbench-container input:after,
#mc-workbench-container q:before, #mc-workbench-container q:after {
	content: '';
	content: none;
}
#mc-workbench-container table {
	border-collapse: collapse;
	border-spacing: 0;
}
#mc-workbench-container input {
  color: #333;
  vertical-align: inherit !important;
  z-index: inherit !important;
	outline: none !important;
}
#mc-workbench-container textarea {
  z-index: inherit !important;
	outline: none !important;
}

/*****************************************************************************************
******************************************************************************************
******************************************************************************************
******************************************************************************************
******************************************************************************************
********************************* End of reset CSS ***************************************/
::-webkit-scrollbar {
  width: 1px;
  height: 10px;
  background-color: #D2CECE;
}
::-webkit-scrollbar-thumb {
  background-color:#808080;
}
::-webkit-input-placeholder {
   color: #9E9A9A !important;
}
@font-face {
    font-family: delFontRegular;
    src: url('./../fonts/Delicious-Roman.otf');
}
#mc-workbench-container * {
  box-sizing: border-box !important;
}
#mc-workbench-container {
  position: fixed;
  width: 33.3%;
  z-index: 999999;
  height: inherit;
  top: 0;
  right: 0;
  overflow-y: scroll;
  border-left: 1px solid #D0D0D0;
  text-align: left;
}
#mc-workbench-body {
	height: 100%;
  overflow: auto;
}
#mc-workbench-container, #mc-workbench-body {
  background: #fff;
	font-family: delFontRegular;
  cursor: pointer;
	font-size: 16px;
}
#mc-workbench-container div, #mc-workbench-container input[type="text"],
#mc-workbench-container textarea {
	font-family: delFontRegular !important;
}
#mc-workbench-container .actions-disabled {
	color: #059A2E !important;
}
#mc-workbench-container .inactive,  #mc-workbench-container .hide,
#mc-workbench-container [data-not-mapped="true"], #mc-workbench-container [data-not-error="true"] {
  display: none !important;
}
#mc-workbench-container input[type="checkbox"] {
  top: 2px;
  position: relative;
  width: 24px!important;
  height: 24px!important;
  display: inline-block;
  -webkit-appearance: checkbox !important;
}
#mc-workbench-container .checkbox-label {
  position: relative;
  top: -5px;
  font-size: 14px;
  color: #333;
}
#mc-workbench-container .checkbox-label:before {
  display: none !important;
}
#mc-workbench-container .checkbox-container {
  padding: 10px;
	display: inline-block;
	width: 165px;
}
#mc-workbench-title {
	z-index: 666;
  text-align: center;
  padding: 14px;
  background: #E8E8E8;
  color: #3E3D3D;
	font-size: 22px;
	position: absolute;
	width: 100%;
}
#mc-workbench-menu {
	z-index: 666;
	position: absolute;
	width: 100%;
	top: 46px;
  list-style: none;
  padding: 0;
  margin: 0;
	display: -webkit-flex;
	display: flex;
	-webkit-flex-direction: row;
	flex-direction: row;
	-webkit-align-items: center;
	align-items: center;
	-webkit-justify-content: center;
	justify-content: center;
}
#mc-workbench-menu > li {
	flex: 1;
  background: white;
  border-bottom: 1px solid #D2CACA;
	border-right: 1px solid #D2CACA;
  text-align: center;
}
#mc-workbench-menu > li:last-of-type {
  border-right: 0;
}
#mc-workbench-menu > li > .mc-workbench-menu-text {
  color: #555;
  font-size: 18px !important;
  padding: 8px 0 5px;
}
#mc-workbench-menu .mc-workbench-menu-tip {
  display: block;
  font-size: 14px;
	width: 50px;
	margin: 2px auto;
}
#mc-workbench-workspace {
	top: 108px;
	position: relative;
}
#mc-workbench-widget-editor {
  padding-bottom: 50px;
}
#mc-workbench-widget-title, #mc-workbench-widget-name {
  color: #696969;
  padding: 15px 5px 10px;
	margin-top: 10px;
  border-bottom: 1px solid #70a2f9;
  font-size: 22px;
	text-align: center;
}
#mc-workbench-widget-search, #mc-workbench-prop-search {
	width: 100% !important;
  margin-top: 10px !important;
  padding: 10px !important;
  border: 0 !important;
  font-size: 16px !important;
  color: #6F6E6E !important;
  font-style: italic !important;
  border-bottom: 1px solid #DEDEDE !important;
  font-family: Arial !important;
}
#mc-workbench-widget-list li {
  background: white;
  color: #007C9E;
  padding: 10px 10px 10px;
  border-bottom: 1px solid #D2CACA;
  font-size: 16px !important;
}
#mc-workbench-selector-title, #mc-workbench-settings-title {
  font-size: 18px;
  color: #333;
  padding: 10px 10px 30px;
}
#mc-workbench-selector-container, #mc-workbench-settings-container {
	white-space: nowrap;
  padding: 0 10px;
}
#mc-workbench-container .mc-workbench-prop-label {
  display: block;
  text-align: left;
  color: #0D82A5;
  margin-bottom: 2px;
  font-size: 16px !important;
}
#mc-workbench-container .mc-workbench-prop-label[data-extra-type="modal"] {
  color: #0C8406;
}
#mc-workbench-container .mc-workbench-prop-label[data-extra-type="common"] {
  color: #D02442;
}
/* ... */

